--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "babel-cli": "^6.4.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "jquery": "*"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -62,6 +63,9 @@
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack-hot-middleware": "^2.2.0",
+    "form-serialize": "0.7.0",
+    "http-proxy": "*",
+    "firebase": "*"
   }
 }
