--- a/package.json
+++ b/package.json
@@ -27,19 +27,21 @@
   },
   "dependencies": {
     "babel-cli": "^6.4.0",
+    "body-parser": "^1.15.1",
+    "jquery": "*",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "jquery": "*"
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.3",
     "babel-jscs": "^2.0.5",
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.3.13",
+    "body-parser": "^1.15.1",
     "chai": "^3.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.19.0",
@@ -47,7 +49,10 @@
     "eslint-plugin-react": "^3.4.2",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
+    "firebase": "*",
+    "form-serialize": "0.7.0",
     "html-webpack-plugin": "^1.6.1",
+    "http-proxy": "*",
     "jscs": "^2.1.1",
     "jsdom": "^6.5.1",
     "json-loader": "^0.5.3",
@@ -63,9 +68,6 @@
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0",
-    "form-serialize": "0.7.0",
-    "http-proxy": "*",
-    "firebase": "*"
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
