Move checkout books to another page; added filtering feature

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "body-parser": "^1.15.1",
     "jquery": "*",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-router": "*"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
