--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jquery": "*",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "*"
+    "react-router": "2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
